<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.paullee.liyingheng.ashamednews.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/SettingsActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingActivity_toolbar_title"
                android:textStyle="bold"
                android:textSize="@dimen/Title_textSize"
                android:layout_centerVertical="true"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/SettingsActivity_commit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/SettingsActivity_commit"
                android:background="@android:color/transparent" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/general_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsActivity_item_serverip" />

        <EditText
            android:id="@+id/SettingsActivity_item_serverip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
